# yarp-objectTracking

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/script/: objectTracking.xml
app/scripts/: objectTracking.xml.template
include/iCub/: objectTrackingModule.h  objectTrackingRateThread.h
include/iCub/kfebt/: kfebtracker.h
include/iCub/kfebt/trackers/: tkcf.cpp  tmosse.cpp
include/iCub/kfebt/trackers/ASMS/: colotracker.h
include/iCub/kfebt/trackers/CBT/: cbt.cpp  cbt.h
include/iCub/kfebt/trackers/CBT/consensus/: Consensus.cpp
include/iCub/kfebt/trackers/MOSSE/: mosse.cpp
include/iCub/kfebt/trackers/NCC/: ncc.cpp
include/iCub/kfebt/trackers/kcf/: kcf.cpp  kcf.h
src/: kfebt.cpp  kfebtracker.cpp  main.cpp  main.cpp.txt  objectTrackingModule.cpp  objectTrackingRateThread.cpp
